Fix zoom on firefox ... maybe?

--- a/src/components/MapScreen.css
+++ b/src/components/MapScreen.css
@@ -10,6 +10,7 @@ body {
   position: fixed;
   top: 75px;
   right: 15px;
+  z-index: 1;
   /* float: right; */
 }
 
